<resources>
    <string name="app_name_main">CellWall</string>
    <string name="app_name_subtitle">Client</string>
    <string name="app_name">CellWall Client</string>
    <string name="title_activity_login">Connect to server</string>

    <string name="action_reconnect">Reconnect</string>
    <string name="action_login">Connect to new server</string>
    <string name="action_exit">Done</string>

    <string name="prompt_address">Address</string>
    <string name="address_hint">HTML Address of your CellWall Server.</string>
    <string name="prompt_serial">Serial number</string>
    <string name="action_connect">Connect to server</string>
    <string name="error_invalid_address">This URL is invalid</string>
    <string name="error_incorrect_address">Could not find a CellWall server at this URL</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_connection_failed">Could not connect</string>

    <string name="debug_uuid">Serial: %1$s</string>
    <string name="debug_device_name">Device name: %1$s</string>
    <string name="debug_density">Density: %1$f</string>
    <string name="debug_display">Display: %1$dx%2$d</string>
    <string name="debug_display_dp">Display: %1$ddp x %2$ddp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
