<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:padding="16dp"
  android:background="#429A46"
  tools:context=".ui.login.LoginActivity">

  <!-- Login progress -->
  <ProgressBar
    android:id="@+id/login_progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone" />

  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_fg_trimmed"
        tools:ignore="ContentDescription" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/address"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_address"
          android:inputType="textUri"
          android:maxLines="1"
          android:singleLine="true"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serial_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/serial"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_serial"
          android:maxLines="1"
          android:singleLine="true"/>
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/connect_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_login"
        android:textStyle="bold" />

      <LinearLayout
        android:id="@+id/debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
          android:id="@+id/debug_device_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/debug_device_name" />

        <TextView
          android:id="@+id/debug_density"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/debug_density" />

        <TextView
          android:id="@+id/debug_display"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/debug_display" />
      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</LinearLayout>
